--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -7,6 +7,13 @@
                 <h1>This is about us</h1>
                 <p>This is a abddddout us text</p>
                 <p> Thic came from the template: {{index .StringMap "test"}}</p>
+                <p>
+                    {{if ne (index .StringMap "remote_ip") "" }}
+                        Your remote ip address is : {{index .StringMap "remote_ip"}}
+                    {{else}}
+                        I dont know your ip address yet. Visit the <a href="home.page.html">home page</a>.
+                    {{end}}
+                </p>
             </div>
         </div>
     </div>
